--- a/public/themes/admin_simpleboot3/portal/admin_album/index.html
+++ b/public/themes/admin_simpleboot3/portal/admin_album/index.html
@@ -91,7 +91,7 @@
                                value="{$vo.id}" title="ID:{$vo.id}">
                     </td>
                     <td><b>{$vo.id}</b></td>
-                    <td>{$vo.name}</td>
+                    <td>{$vo.album_name}</td>
                     <td>{$vo.language}</td>
                     <td>{$vo.singer}</td>
                     <td>{$vo.post_hits|default=0}</td>
