--- a/public/themes/simpleboot3/portal/album/index.html
+++ b/public/themes/simpleboot3/portal/album/index.html
@@ -18,24 +18,22 @@
             <img src="images/avtar.png" alt="" />
         </div>
         <div class="zhongnr flex1">
-            <div class="shinremt">诗人名称 <br><span class="sinnrew">EUNGLISH NAME</span></div>
+            <div class="shinremt"></div>
             <table class="sbbtl">
                 <tr>
-                    <td>出生地  </td>
-                    <td>出生日期</td>
-                    <td>逝世日期</td>
+                    <td>所属歌手：</td><td>谁啊</td>
+                    <td>发行日期：</td><td>逝世日期</td>
                 </tr>
                 <tr>
-                    <td>英国伦敦      </td>
-                    <td>1800-11-09    </td>
-                    <td>1882-09-09    </td>
+                    <td>歌曲数量：</td><td>1882-09-09    </td>
+                    <td>专辑语言：</td><td>1882-09-09    </td>
                 </tr>
 
             </table>
             <div class="ansbibtn df ">
-                <a href="#" class="df ac jc cur" ><span class=""><img src="images/play.png" alt="" /></span> 播放</a>
-                <a href="#" class="df ac jc" ><span class=""><img src="images/icm1.png" alt="" /></span> 收藏</a>
-                <a href="#" class="df ac jc" ><span class=""><img src="images/icm2.png" alt="" /></span> 分享</a>
+                <a href="#" class="df ac jc cur" ><span class=""><img src="__TMPL__/public/assets/images/play.png" alt="" /></span> 播放</a>
+                <a href="#" class="df ac jc" ><span class=""><img src="__TMPL__/public/assets/images/icm1.png" alt="" /></span> 收藏</a>
+                <a href="#" class="df ac jc" ><span class=""><img src="__TMPL__/public/assets/images/icm2.png" alt="" /></span> 分享</a>
 
             </div>
 
@@ -61,71 +59,22 @@
                     <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
                     <td class="shiinco">
                         <div class="df ac">
-                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
+                            <a href="#" class="" ><img src="__TMPL__/public/assets/images/c1.png" alt="" /></a>
+                            <a href="#" class="" ><img src="__TMPL__/public/assets/images/c2.png" alt="" /></a>
+                            <a href="#" class="" ><img src="__TMPL__/public/assets/images/c3.png" alt="" /></a>
+                            <a href="#" class="" ><img src="__TMPL__/public/assets/images/c4.png" alt="" /></a>
+                            <a href="#" class="" ><img src="__TMPL__/public/assets/images/c5.png" alt="" /></a>
                         </div>
                     </td>
                     <td>1098年   </td>
                     <td>《诗歌专辑名称》   </td>
                     <td>10分钟   </td>
                 </tr>
-                <tr>
-
-                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
-                    <td class="shiinco">
-                        <div class="df ac">
-                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
-                        </div>
-                    </td>
-                    <td>1098年   </td>
-                    <td>《诗歌专辑名称》   </td>
-                    <td>10分钟   </td>
-                </tr>
-                <tr>
-
-                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
-                    <td class="shiinco">
-                        <div class="df ac">
-                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
-                        </div>
-                    </td>
-                    <td>1098年   </td>
-                    <td>《诗歌专辑名称》   </td>
-                    <td>10分钟   </td>
-                </tr>
-                <tr>
-
-                    <td>诗歌名称诗歌名称诗歌名称诗歌名称诗歌名称   </td>
-                    <td class="shiinco">
-                        <div class="df ac">
-                            <a href="#" class="" ><img src="images/c1.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c2.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c3.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c4.png" alt="" /></a>
-                            <a href="#" class="" ><img src="images/c5.png" alt="" /></a>
-                        </div>
-                    </td>
-                    <td>1098年   </td>
-                    <td>《诗歌专辑名称》   </td>
-                    <td>10分钟   </td>
-                </tr>
-
 
             </table>
         </div>
         <div class="flex1">
-            <div class="shijjs">诗人简介</div>
+            <div class="shijjs">专辑简介</div>
             <div class="ndwixq ndwixqx">
 
                 纵有成百万的人直接或间接受到达秘属灵生活和工作的影响，但是很少人真正认识这位被神大用的仆人。 依照教会的历史有一件不辩自明的事实，就是每个复兴运动都有一个属灵的领袖。等到主的时候到了，那人就会出现。照样在19世纪初叶，在那次属灵运动开始的时候，神所要使用的器皿亦应时而生。
