--- a/public/themes/simpleboot3/portal/poet/index.html
+++ b/public/themes/simpleboot3/portal/poet/index.html
@@ -58,7 +58,7 @@
                             <a href="#" class="" ><img src="__TMPL__/public/assets/images/c5.png" alt="" /></a>
                         </div>
                     </td>
-                    <td>{$vo.release_time}年   </td>
+                    <td>{$vo.release_time}</td>
                     <td>《{$vo.name}》   </td>
                     <td>10分钟   </td>
                 </tr>
