--- a/public/themes/admin_simpleboot3/portal/admin_album/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_album/add.html
@@ -14,7 +14,7 @@
                         <div class="form-group">
                             <label for="input-name"><span class="form-required">*</span>专辑名称</label>
                             <div>
-                                <input type="text" class="form-control" id="input-name" name="name">
+                                <input type="text" class="form-control" id="input-name" name="album_name">
                             </div>
                         </div>
 
