--- a/public/themes/simpleboot3/portal/albumlist/index.html
+++ b/public/themes/simpleboot3/portal/albumlist/index.html
@@ -55,7 +55,7 @@
             <div class="liscontin">
                 <ul class="shilist1 shilist3">
                     <foreach name="album" item="vo">
-                    <li><a href="#" class="" ><span class="sspomg"><img src="images/shi2.jpg" alt="" /></span><span class="shinmtl">{$vo.name}</span></a></li>
+                    <li><a href="#" class="" ><span class="sspomg"><img src="images/shi2.jpg" alt="" /></span><span class="shinmtl">{$vo.album_name}</span></a></li>
                     </foreach>
                 </ul>
             </div>
