--- a/public/themes/admin_simpleboot3/admin/main/index.html
+++ b/public/themes/admin_simpleboot3/admin/main/index.html
@@ -7,10 +7,10 @@
             </div>
             <div class="panel-body home-info">
                 <ul class="list-unstyled">
-                    <li><em>官网</em> <span><a href="http://www.thinkcmf.com" target="_blank">www.thinkcmf.com</a></span>
+                    <li><em>官网</em> <span><a href="#" target="_blank"></a></span>
                     </li>
-                    <li><em>QQ 群</em> <span>100828313,316669417</span></li>
-                    <li><em>联系邮箱</em> <span>thinkcmf@126.com</span></li>
+                    <li><em>QQ 群</em> <span></span></li>
+                    <li><em>联系邮箱</em> <span></span></li>
                 </ul>
             </div>
         </div>
@@ -18,21 +18,21 @@
     <case value="MainContributors">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">主要贡献者</h3>
+                <h3 class="panel-title"></h3>
             </div>
             <div class="panel-body home-info">
                 <ul class="list-inline">
-                    <li>老猫</li>
-                    <li>Sam</li>
-                    <li>Tuolaji</li>
-                    <li>睡不醒的猪</li>
-                    <li>小夏</li>
-                    <li>Powerless</li>
-                    <li>WelKinVan</li>
-                    <li>Kane</li>
-                    <li>iYting</li>
-                    <li>pl125</li>
-                    <li>五五</li>
+                    <!--<li>老猫</li>-->
+                    <!--<li>Sam</li>-->
+                    <!--<li>Tuolaji</li>-->
+                    <!--<li>睡不醒的猪</li>-->
+                    <!--<li>小夏</li>-->
+                    <!--<li>Powerless</li>-->
+                    <!--<li>WelKinVan</li>-->
+                    <!--<li>Kane</li>-->
+                    <!--<li>iYting</li>-->
+                    <!--<li>pl125</li>-->
+                    <!--<li>五五</li>-->
                 </ul>
             </div>
         </div>
@@ -40,27 +40,27 @@
     <case value="Contributors">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">贡献者</h3>
+                <!--<h3 class="panel-title">贡献者</h3>-->
             </div>
             <div class="panel-body home-info">
                 <ul class="list-inline">
-                    <li>Kin Ho</li>
-                    <li><a href="http://wzx.thinkcmf.com" target="_blank">Powerless</a></li>
-                    <li>Jess</li>
-                    <li>木兰情</li>
-                    <li><a href="http://www.91freeweb.com/" target="_blank">Labulaka</a></li>
-                    <li><a href="http://www.syousoft.com/" target="_blank">WelKinVan</a></li>
-                    <li><a href="http://blog.sina.com.cn/u/1918098881" target="_blank">Jeson</a></li>
-                    <li>Yim</li>
-                    <li><a href="http://www.jamlee.cn/" target="_blank">Jamlee</a></li>
-                    <li><a>香香咸蛋黄</a></li>
-                    <li><a href="http://www.xdmeng.cn" target="_blank">小凯</a></li>
-                    <li><a href="https://www.devmsg.com" target="_blank">Co</a></li>
-                    <li>Rainfer</li>
-                    <li><a href="http://www.yaoweixiu.cn/" target="_blank">Kane</a></li>
-                    <li><a href="http://www.wuwenfu.cn/" target="_blank">北岸的云</a></li>
-                    <li>pl125</li>
-                    <li><a href="http://www.wuwuseo.com/" target="_blank">五五</a></li>
+                    <!--<li>Kin Ho</li>-->
+                    <!--<li><a href="http://wzx.thinkcmf.com" target="_blank">Powerless</a></li>-->
+                    <!--<li>Jess</li>-->
+                    <!--<li>木兰情</li>-->
+                    <!--<li><a href="http://www.91freeweb.com/" target="_blank">Labulaka</a></li>-->
+                    <!--<li><a href="http://www.syousoft.com/" target="_blank">WelKinVan</a></li>-->
+                    <!--<li><a href="http://blog.sina.com.cn/u/1918098881" target="_blank">Jeson</a></li>-->
+                    <!--<li>Yim</li>-->
+                    <!--<li><a href="http://www.jamlee.cn/" target="_blank">Jamlee</a></li>-->
+                    <!--<li><a>香香咸蛋黄</a></li>-->
+                    <!--<li><a href="http://www.xdmeng.cn" target="_blank">小凯</a></li>-->
+                    <!--<li><a href="https://www.devmsg.com" target="_blank">Co</a></li>-->
+                    <!--<li>Rainfer</li>-->
+                    <!--<li><a href="http://www.yaoweixiu.cn/" target="_blank">Kane</a></li>-->
+                    <!--<li><a href="http://www.wuwenfu.cn/" target="_blank">北岸的云</a></li>-->
+                    <!--<li>pl125</li>-->
+                    <!--<li><a href="http://www.wuwuseo.com/" target="_blank">五五</a></li>-->
                 </ul>
             </div>
         </div>
