--- a/public/themes/admin_simpleboot3/portal/admin_poet/index.html
+++ b/public/themes/admin_simpleboot3/portal/admin_poet/index.html
@@ -128,8 +128,8 @@
                         </notempty>
                     </td>
                     <td>
-                        <a href="{:url('AdminAlbum/edit',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
-                        <a href="{:url('AdminAlbum/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:lang('DELETE')}</a>
+                        <a href="{:url('AdminPoet/edit',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
+                        <a href="{:url('AdminPoet/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:lang('DELETE')}</a>
                     </td>
                 </tr>
             </foreach>
