--- a/public/themes/simpleboot3/portal/poet/index.html
+++ b/public/themes/simpleboot3/portal/poet/index.html
@@ -59,7 +59,7 @@
                         </div>
                     </td>
                     <td>{$vo.release_time}</td>
-                    <td>《{$vo.name}》   </td>
+                    <td>《{$vo.album_name}》   </td>
                     <td>10分钟   </td>
                 </tr>
                 </foreach>
