--- a/public/themes/simpleboot3/portal/album/index.html
+++ b/public/themes/simpleboot3/portal/album/index.html
@@ -15,7 +15,7 @@
     <div class="cl h22"></div>
     <div class="inner df js">
         <div class="digentu">
-            <img src="{:cmf_get_image_url($album.cover)}" alt="" />
+            <img src="{:cmf_get_image_url($album.cover)}" alt="" width="241" height="258"/>
         </div>
         <div class="zhongnr flex1">
             <div class="shinremt">{$album.album_name}</div>
