--- a/public/themes/admin_simpleboot3/portal/admin_article/edit.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/edit.html
@@ -29,11 +29,11 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:url('AdminArticle/index')}">漫谈文章管理</a></li>
+        <li><a href="{:url('AdminArticle/index')}">诗歌管理</a></li>
         <li>
-            <a href="{:url('AdminArticle/add')}">添加漫谈文章</a>
+            <a href="{:url('AdminArticle/add')}">添加诗歌</a>
         </li>
-        <li class="active"><a href="#">编辑漫谈文章</a></li>
+        <li class="active"><a href="#">编辑诗歌</a></li>
     </ul>
     <form action="{:url('AdminArticle/editPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
         <div class="row">
@@ -60,68 +60,84 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>关键词</th>
+                        <th width="100">所属专辑<span class="form-required">*</span></th>
                         <td>
-                            <input class="form-control" type="text" name="post[post_keywords]"
-                                   value="{$post['post_keywords']}" placeholder="请输入关键字">
-                            <p class="help-block">多关键词之间用英文逗号隔开</p>
+                            <select class="form-control" name="post[album_id]" id="input-parent">
+                                <foreach name="album" item="vo">
+                                    <option value="{$vo.id}">{$vo.album_name}</option>
+                                </foreach>
+                            </select>
                         </td>
                     </tr>
                     <tr>
-                        <th>文章来源</th>
+                        <th width="100">所属诗人<span class="form-required">*</span></th>
                         <td>
-                            <input class="form-control" type="text" name="post[post_source]"
-                                   value="{$post['post_source']}" placeholder="请输入文章来源">
+                            <select class="form-control" name="post[poet_id]" >
+                                <foreach name="poet" item="vo">
+                                    <option value="{$vo.id}">{$vo.name}</option>
+                                </foreach>
+                            </select>
                         </td>
                     </tr>
                     <tr>
-                        <th>摘要</th>
+                        <th>作曲</th>
                         <td>
-                            <textarea class="form-control" name="post[post_excerpt]" style="height: 50px;"
-                                      placeholder="请填写摘要">{$post.post_excerpt}</textarea>
+                            <input class="form-control" type="text" name="post[composer]" id="composer" required value="{$post.composer}"/>
                         </td>
                     </tr>
                     <tr>
-                        <th>内容</th>
+                        <th>调号</th>
+                        <td>
+                            <input class="form-control" type="text" name="post[tone]" id="tone" required value="{$post.tone}"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>节奏</th>
+                        <td>
+                            <input class="form-control" type="text" name="post[rhythm]" id="rhythm" required value="{$post.rhythm}"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>韵律</th>
+                        <td>
+                            <input class="form-control" type="text" name="post[cadence]" id="cadence" required value="{$post.cadence}"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>歌词</th>
                         <td>
                             <script type="text/plain" id="content" name="post[post_content]">{$post.post_content}</script>
                         </td>
                     </tr>
                     <tr>
-                        <th>相册</th>
+                        <th>诗歌赏析</th>
                         <td>
-                            <ul id="photos" class="pic-list list-unstyled form-inline">
-                                <notempty name="post.more.photos">
-                                    <foreach name="post.more.photos" item="vo">
-                                        <php>$img_url=cmf_get_image_preview_url($vo['url']);</php>
-                                        <li id="saved-image{$key}">
-                                            <input id="photo-{$key}" type="hidden" name="photo_urls[]"
-                                                   value="{$vo.url}">
-                                            <input class="form-control" id="photo-{$key}-name" type="text"
-                                                   name="photo_names[]"
-                                                   value="{$vo.name|default=''}" style="width: 200px;" title="图片名称">
-                                            <img id="photo-{$key}-preview"
-                                                 src="{:cmf_get_image_preview_url($vo['url'])}"
-                                                 style="height:36px;width: 36px;"
-                                                 onclick="parent.imagePreviewDialog(this.src);">
-                                            <a href="javascript:uploadOneImage('图片上传','#photo-{$key}');">替换</a>
-                                            <a href="javascript:(function(){$('#saved-image{$key}').remove();})();">移除</a>
-                                        </li>
-                                    </foreach>
-                                </notempty>
-                            </ul>
-                            <a href="javascript:uploadMultiImage('图片上传','#photos','photos-item-tpl');"
-                               class="btn btn-sm btn-default">选择图片</a>
+                            <script type="text/plain" id="content1" name="post[appreciation]">{:htmlspecialchars_decode($post['appreciation'])}</script>
+                            <!--<textarea class="form-control" name="post[appreciation]" style="height: 50px;"></textarea>-->
                         </td>
                     </tr>
                     <tr>
-                        <th>诗歌附件</th>
+                        <th>诗歌考典</th>
+                        <td>
+                            <script type="text/plain" id="content2" name="post[allusion]">{:htmlspecialchars_decode($post['allusion'])}</script>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>诗歌封面</th>
+                        <td>
+                            <ul id="photos" class="pic-list list-unstyled form-inline"></ul>
+                            <a href="javascript:uploadMultiImage('图片上传','#photos','photos-item-tpl');"
+                               class="btn btn-default btn-sm">选择图片</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>诗歌音乐上传</th>
                         <td>
                             <ul id="mp3" class="pic-list list-unstyled form-inline">
                             </ul>
-                            <input type="hidden" name="post[mp3]" class="form-control"
-                                   id="js-thumbnail-input">
-                            <a href="javascript:uploadOne('文件上传','#js-thumbnail-input');">
+                            <input type="hidden" name="post[music]" class="form-control"
+                                   id="js-thumbnail-input" value="{$post.music}">
+                            <a href="javascript:uploadOne('文件上传','#js-thumbnail-input');" class="btn btn-sm btn-default">
                                 <img src="__TMPL__/public/assets/images/default-thumbnail.png"
                                      id="js-thumbnail-input-preview"
                                      width="135" style="cursor: pointer"/>
@@ -130,125 +146,18 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>附件</th>
+                        <th>PDF附件</th>
                         <td>
                             <ul id="files" class="pic-list list-unstyled form-inline">
-                                <notempty name="post.more.files">
-                                    <foreach name="post.more.files" item="vo">
-                                        <php>$file_url=cmf_get_file_download_url($vo['url']);</php>
-                                        <li id="saved-file{$key}">
-                                            <input id="file-{$key}" type="hidden" name="file_urls[]"
-                                                   value="{$vo.url}">
-                                            <input class="form-control" id="file-{$key}-name" type="text"
-                                                   name="file_names[]"
-                                                   value="{$vo.name}" style="width: 200px;" title="图片名称">
-                                            <a id="file-{$key}-preview" href="{$file_url}" target="_blank">下载</a>
-                                            <a href="javascript:uploadOne('图片上传','#file-{$key}','file');">替换</a>
-                                            <a href="javascript:(function(){$('#saved-file{$key}').remove();})();">移除</a>
-                                        </li>
-                                    </foreach>
-                                </notempty>
                             </ul>
                             <a href="javascript:uploadMultiFile('附件上传','#files','files-item-tpl','file');"
                                class="btn btn-sm btn-default">选择文件</a>
                         </td>
                     </tr>
+
                 </table>
             </div>
-            <div class="col-md-3">
-                <table class="table table-bordered">
-                    <tr>
-                        <th>缩略图</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div style="text-align: center;">
-                                <input type="hidden" name="post[more][thumbnail]" id="thumbnail"
-                                       value="{$post.more.thumbnail|default=''}">
-                                <a href="javascript:uploadOneImage('图片上传','#thumbnail');">
-                                    <if condition="empty($post.more.thumbnail)">
-                                        <img src="__TMPL__/public/assets/images/default-thumbnail.png"
-                                             id="thumbnail-preview"
-                                             width="135" style="cursor: pointer"/>
-                                        <else/>
-                                        <img src="{:cmf_get_image_preview_url($post.more.thumbnail)}"
-                                             id="thumbnail-preview"
-                                             width="135" style="cursor: pointer"/>
-                                    </if>
-                                </a>
-                                <input type="button" class="btn btn-sm btn-cancel-thumbnail" value="取消图片">
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>发布时间</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <input class="form-control js-bootstrap-datetime" type="text" name="post[published_time]"
-                                   value="{:date('Y-m-d H:i',$post['published_time'])}">
-                        </td>
-                    </tr>
-                    <!--
-                    <tr>
-                        <th>评论</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label style="width: 88px"><a
-                                    href="javascript:openIframeDialog('{:url('comment/commentadmin/index',array('post_id'=>$post['id']))}','评论列表')">查看评论</a></label>
-                        </td>
-                    </tr>
-                    -->
-                    <tr>
-                        <th>状态</th>
-                        <php>
-                            $status_yes=$post['post_status']==1?"checked":"";
-                            $is_top_yes=$post['is_top']==1?"checked":"";
-                            $recommended_yes=$post['recommended']==1?"checked":"";
-                        </php>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" name="post[post_status]" value="1" {$status_yes}>发布
-                                </label>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="checkbox">
-                                <label><input type="checkbox" name="post[is_top]" value="1" {$is_top_yes}>置顶</label>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <div class="checkbox">
-                                <label>
-                                    <input type="checkbox" name="post[recommended]" value="1" {$recommended_yes}>推荐
-                                </label>
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>文章模板</th>
-                    </tr>
-                    <tr>
-                        <td>
-                            <select class="form-control" name="post[more][template]" id="more-template-select">
-                                <option value="">请选择模板</option>
-                                <foreach name="article_theme_files" item="vo">
-                                    <php>$value=preg_replace('/^portal\//','',$vo['file']);</php>
-                                    <option value="{$value}">{$vo.name} {$vo.file}.html</option>
-                                </foreach>
-                            </select>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
@@ -269,7 +178,12 @@
     $(function () {
 
         editorcontent = new baidu.editor.ui.Editor();
-        editorcontent.render('content');
+//        editorcontent.render('content');
+//        editorcontent.render('content1');
+//        editorcontent.render('content2');
+        UE.getEditor("content");
+        UE.getEditor("content1");
+        UE.getEditor("content2");
         try {
             editorcontent.sync();
         } catch (err) {
