--- a/public/themes/admin_simpleboot3/portal/admin_article/add.html
+++ b/public/themes/admin_simpleboot3/portal/admin_article/add.html
@@ -141,8 +141,7 @@
                     <tr>
                         <th>PDF附件</th>
                         <td>
-                            <ul id="files" class="pic-list list-unstyled form-inline">
-                            </ul>
+                            <ul id="files" class="pic-list list-unstyled form-inline"></ul>
                             <a href="javascript:uploadMultiFile('附件上传','#files','files-item-tpl','file');"
                                class="btn btn-sm btn-default">选择文件</a>
                         </td>
