--- a/public/themes/simpleboot3/portal/article.html
+++ b/public/themes/simpleboot3/portal/article.html
@@ -36,7 +36,7 @@
         <div class="zhongnr flex1">
             <div class="zhongdtl">{$article.post_title}</div>
             <div class="zhunsnj">
-                诗人： <span class="">{$article.poet}</span>
+                诗人： <span class="">{$article.poet_id}</span>
                 <br>专辑： <span class="">{$article.album}</span>
             </div>
             <div class="ansbibtn df ">
